--- a/Index_full.html
+++ b/Index_full.html
@@ -1,12 +1,15 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Title</title>
 </head>
+
 <body>
     <div class="container">
         <form>
@@ -45,92 +48,126 @@
         </table>
     </div>
 </body>
+
 </html>
 <script type="text/javascript">
-    let url = 'http://127.0.0.1:5000/kh/getall/';
+    let url = 'http://127.0.0.1:5000/tblKhach';
     $(document).ready(function () {
         GetAllCustomers();
     });
-    function GetAllCustomers(){
+    function GetAllCustomers() {
         $.ajax({
-            url: 'http://127.0.0.1:5000/kh/getall', // The URL to which the request is sent
-            method: 'GET',            // The HTTP method (GET, POST, etc.)
-            dataType: 'json',         // The type of data expected in response
-            success: function (data) { // Callback function to handle successful response
-                alert("Thành công");       // Display the received data in the console
+            url: url,
+            method: 'GET',
+            dataType: 'json',
+            success: function (data) {
+                let html = '';
+                data.forEach(function (item) {
+                    html += '<tr>';
+                    html += '<td>' + item.MaKhach + '</td>';
+                    html += '<td>' + item.TenKhach + '</td>';
+                    html += '<td>' + item.DiaChi + '</td>';
+                    html += '<td>' + item.DienThoai + '</td>';
+                    html += '<td><button class="btn btn-danger" onclick="DeleteCustomer(' + item.MaKhach + ')">Xóa</button></td>';
+                    html += '<td><button class="btn btn-primary" onclick="GetCustomer(' + item.MaKhach + ')">Sửa</button></td>';
+                    html += '</tr>';
+                });
+                $('#allKH').html(html);
             },
-            error: function (xhr, status, error) { // Callback function to handle errors
-                alert("lỗi"+ xhr);  // Log the error status to the console
+            error: function (xhr, status, error) {
+                console.error("Error:", error);
             }
         });
-        
     }
     function AddCustomer() {
+        let data = {
+            TenKhach: $("#Name").val(),
+            DiaChi: $("#Address").val(),
+            DienThoai: $("#PhoneNumber").val()
+        };
+
         $.ajax({
-            url: url + "?Id=" + $("#Id").val() + "&Name=" + $("#Name").val() + "&Address=" + $("#Address").val() + "&phoneNumber=" + $("#PhoneNumber").val(),
+            url: url,
             method: "POST",
-            contentType: 'json',
+            contentType: 'application/json',
+            data: JSON.stringify(data),
             dataType: 'json',
-            error: function (res) {
-                alert("Them moi khong thanh cong");
-            },
             success: function (res) {
-                alert("Them moi thanh cong");
+                alert("Thêm mới thành công");
                 GetAllCustomers();
+                clearForm();
             },
-            fail: function (response) { }
-        })
+            error: function (res) {
+                alert(res.responseJSON?.error || "Thêm mới không thành công");
+            }
+        });
     }
     function GetCustomer(id) {
         $.ajax({
             url: url + "/" + id,
             method: 'GET',
-            contentType: 'json',
             dataType: 'json',
-            error: function (res) {
-
-            },
             success: function (res) {
-                console.log(res);
-                $("#Id").val(res.MaKH),
-                $("#Name").val(res.TenKH),
-                $("#Address").val(res.DiaChi),
-                $("#PhoneNumber").val(res.SDT)
+                $("#Id").val(res.MaKhach);
+                $("#Name").val(res.TenKhach);
+                $("#Address").val(res.DiaChi);
+                $("#PhoneNumber").val(res.DienThoai);
             },
-            fail: function (response) { }
-
-        })
+            error: function (res) {
+                console.error("Error:", res);
+            }
+        });
     }
     function UpdateCustomer() {
-        $.ajax({
-            url: url + "?Id=" + $("#Id").val() + "&Name=" + $("#Name").val() + "&Address=" + $("#Address").val() + "&phoneNumber=" + $("#PhoneNumber").val(),
-            method: "PUT",
-            contentType: 'json',
-            dataType: 'json',
-            error: function (res) {
-                alert("Sua khong thanh cong");
-            },
-            success: function (res) {
-                alert("Sua thanh cong");
-                GetAllCustomers();
-            },
-            fail: function (response) { }
-        })
-    }
-    function DeleteCustomer(id) {
+        let id = $("#Id").val();
+        if (!id) {
+            alert("Vui lòng chọn khách hàng để sửa");
+            return;
+        }
+
+        let data = {
+            TenKhach: $("#Name").val(),
+            DiaChi: $("#Address").val(),
+            DienThoai: $("#PhoneNumber").val()
+        };
+
         $.ajax({
             url: url + "/" + id,
-            method: "DELETE",
-            contentType: 'json',
+            method: "PUT",
+            contentType: 'application/json',
+            data: JSON.stringify(data),
             dataType: 'json',
-            error: function (res) {
-                alert("Xoa khong thanh cong");
-            },
             success: function (res) {
-                alert("Xoa thanh cong");
+                alert("Sửa thành công");
                 GetAllCustomers();
+                clearForm();
             },
-            fail: function (response) { }
-        })
+            error: function (res) {
+                alert("Sửa không thành công");
+            }
+        });
+    }
+    function DeleteCustomer(id) {
+        if (confirm("Bạn có chắc chắn muốn xóa khách hàng này?")) {
+            $.ajax({
+                url: url + "/" + id,
+                method: "DELETE",
+                dataType: 'json',
+                success: function (res) {
+                    alert("Xóa thành công");
+                    GetAllCustomers();
+                },
+                error: function (res) {
+                    alert("Xóa không thành công");
+                }
+            });
+        }
+    }
+
+    function clearForm() {
+        $("#Id").val("");
+        $("#Name").val("");
+        $("#Address").val("");
+        $("#PhoneNumber").val("");
     }
 </script>
