--- a/Index_full.html
+++ b/Index_full.html
@@ -51,7 +51,7 @@
 
 </html>
 <script type="text/javascript">
-    let url = 'http://127.0.0.1:5000/tblKhach';
+    let url = '/tblKhach';
     $(document).ready(function () {
         GetAllCustomers();
     });
